|
Quick Lists
|
|
Bug ID:
|
6621084
|
|
Votes
|
0
|
|
Synopsis
|
ciMethodBlocks::split_block_at is broken for methods with exception handler
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs12(b02)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
6687570
|
|
Submit Date
|
24-OCT-2007
|
|
Description
|
Investigation EA failure in CTW I found
the the next function is incorrect for bytecode
with exceptions. It incorrectly splits an exception
handler block.
// ciMethodBlocks::split_block_at
//
// Split the block spanning bci into two separate ranges. The former
// block becomes the second half and a new range is created for the
// first half. Returns the range beginning at bci.
ciBlock *ciMethodBlocks::split_block_at(int bci) {
Posted Date : 2007-10-24 17:29:57.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
When handler block is split new block
has exception handler BCI but does have
exception information (start & end exception BCIs).
The old block has exception information but
it starts in an other BCI.
Posted Date : 2007-10-24 17:29:57.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |