6621084: ciMethodBlocks::split_block_at() is broken for methods with exception handler

After an exception handler block is split the exception information is not moved to the new block which starts in exception handler BCI.

Reviewed-by: jrose